@@ -1,4 +1,7 @@
-plugin.tx_ecorss.feedType = 121
-plugin.tx_ecorss.feed = atom
-plugin.tx_ecorss.title = Title not already defined
-plugin.tx_ecorss.subtitle = Description not already defined
+plugin.tx_ecorss {
+
+  feedType = 121
+  feed = atom
+  title = Title not defined
+  subtitle = Description not defined
+}
