@@ -1,0 +1,34 @@
+|TYPO3| |Monthly Downloads| |Latest Stable Version|
+
+======================
+TYPO3 extension ecorss
+======================
+
+:Repository:  https://github.com/franzholz/ecorss
+:TER:         https://extensions.typo3.org/extension/ecorss/
+
+
+What is does
+------------
+
+The extension ecorss is designed to set up quickly and easily one or many rss feeds from any tables of the database.
+Copy / paste a few TypoScript lines in your template setup and that's it! You can follow the latest content of your website – keep an eye on the latest frontend user, etc.
+
+
+Configuration
+-------------
+
+Insert "EcoRSS: rss services (ecorss)" in the Template module setup under "Include static (from extensions)".
+
+  * Use the constant editor or the TypoScript setup.
+  * Insert an extension plugin.
+
+
+.. |TYPO3| image:: https://img.shields.io/badge/TYPO3-Extension-orange?logo=TYPO3
+   :target: https://extensions.typo3.org/extension/ecorss
+.. |Monthly Downloads| image:: https://poser.pugx.org/jambagecom/ecorss/d/monthly
+   :target: https://packagist.org/packages/jambagecom/ecorss
+.. |Latest Stable Version| image:: http://poser.pugx.org/jambagecom/ecorss/v
+   :target: https://packagist.org/packages/jambagecom/ecorss
+
+
