@@ -8,7 +8,7 @@ $EM_CONF[$_EXTKEY] = array(
     'title' => 'Ecodev : feeds services (RSS / ATOM)',
     'description' => 'Generate easily RSS / ATOM feeds based on the latest content of any tables in the database. Can deal with flexform content and multilingual / multidomain websites.',
     'category' => 'fe',
-    'version' => '1.2.0',
+    'version' => '1.3.0',
     'dependencies' => 'div2007',
     'state' => 'stable',
     'clearcacheonload' => 0,
